--- a/sample.html
+++ b/sample.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>HeatChart: Demonstrations</title>
+    <title>Colorful.js: Demonstrations</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -97,7 +97,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">HeatChart</a>
+          <a class="brand" href="#">colorful</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Demos</a></li>
@@ -116,8 +116,8 @@
       <div class="row">
         <div class="span12">
           <h3>RBG Compatible</h3>
-          <p>HeatChart uses HSL colorspace by default, but if you're stuck with IE8 or lower, you can specify the use of RGB colorspace (at a slight performance cost).</p>
-          <pre class="prettyprint">$('#table0').heatChart({theta: 90, colorModel: 'rgb'});</pre>
+          <p>colorful uses HSL colorspace by default, but if you're stuck with IE8 or lower, you can specify the use of RGB colorspace (at a slight performance cost).</p>
+          <pre class="prettyprint">$('#table0').colorful({theta: 90, colorModel: 'rgb'});</pre>
           <h4>Pretty (HSL)</h4>
           <div class="well">
           <table id="table0">
@@ -254,7 +254,7 @@
         <div class="span12">
           <h3>Discrete Color Steps</h3>
           <p>If you don't want a full gradient, you can pass your desired number of color steps. Also compatible with grayscale colorspace.</p>
-          <pre class="prettyprint">$('#table1').heatChart({theta: 90, discrete: true, steps: 3});</pre>
+          <pre class="prettyprint">$('#table1').colorful({theta: 90, discrete: true, steps: 3});</pre>
           <table id="table1">
             <tr>
               <td>0</td>
@@ -334,7 +334,7 @@
         <div class="span12">
           <h3>Choose Your Scale</h3>
           <p>Default is linear, but if you're feeling fancy, why not go logarithmic?</p>
-          <pre class="prettyprint">$('#table1point5, #table1point6').heatChart({theta: 90, scale: 'log'});</pre>
+          <pre class="prettyprint">$('#table1point5, #table1point6').colorful({theta: 90, scale: 'log'});</pre>
           <table id="table1point5">
             <tr>
               <td>0</td>
@@ -483,7 +483,7 @@
         <div class="span12">
           <h3>Color What You Want</h3>
           <p>If you don't want to apply the coloring to element backrounds, pass your desired alternative CSS attribute.</p>
-                  <pre class="prettyprint">$('#table2').heatChart({theta: 90, attributeToColor: 'color'});</pre>
+                  <pre class="prettyprint">$('#table2').colorful({theta: 90, attributeToColor: 'color'});</pre>
                   <table id="table2">
                     <tr>
                       <td>0</td>
@@ -563,7 +563,7 @@
                 <div class="span12">
                   <h3>Size of the Spectrum</h3>
                   <p>Choose the spectrum width by specifying how many degrees around the color wheel you would like to travel.</p>
-                  <pre class="prettyprint">$('#table3').heatChart({theta: 180});</pre>
+                  <pre class="prettyprint">$('#table3').colorful({theta: 180});</pre>
                   <table id="table3">
                     <tr>
                       <td>0</td>
@@ -643,7 +643,7 @@
                 <div class="span12">
                   <h3>Fast Forward</h3>
                   <p>If you would like to use a particular portion of the spectrum, define an offset (in degrees) for the start of your theta region.</p>
-                  <pre class="prettyprint">$('#table4').heatChart({theta: 180, offset: 180});</pre>
+                  <pre class="prettyprint">$('#table4').colorful({theta: 180, offset: 180});</pre>
                   <table id="table4">
                     <tr>
                       <td>0</td>
@@ -723,7 +723,7 @@
                 <div class="span12">
                   <h3>Reverse! Reverse!</h3>
                   <p>Optionally travel around the color spectrum in reverse.</p>
-                  <pre class="prettyprint">$('#table5').heatChart({theta: 180, offset: 180, reverse: true});</pre>
+                  <pre class="prettyprint">$('#table5').colorful({theta: 180, offset: 180, reverse: true});</pre>
                   <table id="table5">
                     <tr>
                       <td>0</td>
@@ -803,7 +803,7 @@
                 <div class="span12">
                   <h3>Please don't make me use tables...</h3>
                   <p>Use whatever you want. Simply specify which type of HTML tag should be parsed for numerical values.</p>
-                  <pre class="prettyprint">$('#div1').heatChart({theta: 360, elementSelector: 'div'});</pre>
+                  <pre class="prettyprint">$('#div1').colorful({theta: 360, elementSelector: 'div'});</pre>
                   <div id="div1" class="demo-div clearfix">
                     <div>0</div>
                     <div>1</div>
@@ -821,7 +821,7 @@
                 <div class="span12">
                   <h3>Going Grey (or Gray)</h3>
                   <p>Hate color? Go grayscale.</p>
-                  <pre class="prettyprint">$('#div2').heatChart({colorModel: 'grayscale', elementSelector: 'div'});</pre>
+                  <pre class="prettyprint">$('#div2').colorful({colorModel: 'grayscale', elementSelector: 'div'});</pre>
                   <div id="div2" class="demo-div clearfix">
                     <div>0</div>
                     <div>1</div>
@@ -838,7 +838,7 @@
                 </div>
 
                 <div class="span12">
-                  <pre class="prettyprint">$('#div3').heatChart({colorModel: 'grayscale', discrete: true, steps:3, elementSelector: 'div'});</pre>
+                  <pre class="prettyprint">$('#div3').colorful({colorModel: 'grayscale', discrete: true, steps:3, elementSelector: 'div'});</pre>
                   <div id="div3" class="demo-div clearfix">
                     <div>0</div>
                     <div>1</div>
@@ -855,7 +855,7 @@
                 </div>
 
                 <div class="span12">
-                  <pre class="prettyprint">$('#div4').heatChart({colorModel: 'grayscale', discrete: true, steps:5, elementSelector: 'div'});</pre>
+                  <pre class="prettyprint">$('#div4').colorful({colorModel: 'grayscale', discrete: true, steps:5, elementSelector: 'div'});</pre>
                   <div id="div4" class="demo-div clearfix">
                     <div>0</div>
                     <div>1</div>
@@ -874,7 +874,7 @@
                 <div class="span12">
                   <h3>Smart Parsing</h3>
                   <p>We're totally cool with floats. Furthermore, values in your elements needn't even need to be entirely numeric. We'll do our best to pull out the right numbers.</p>
-                  <pre class="prettyprint">$('#div5').heatChart({theta: 220, elementSelector: 'a', attributeToColor: 'color'});</pre>
+                  <pre class="prettyprint">$('#div5').colorful({theta: 220, elementSelector: 'a', attributeToColor: 'color'});</pre>
                   <div id="div5" class="demo-div clearfix">
                     <p><a href="#" title="1 Widget">1 Widget</a> | <a href="#" title="2 Widgets">2 Widgets</a> | <a href="#" title="3 Widgets">3 Widgets</a> | <a href="#" title="4 Widgets">4 Widgets</a> | <a href="#" title="5 Widgets">5 Widgets</a> | <a href="#" title="6 Widgets">6 Widgets</a> | <a href="#" title="7 Widgets">7 Widgets</a> | <a href="#" title="8 Widgets">8 Widgets</a> | <a href="#" title="9 Widgets">9 Widgets</a> | <a href="#" title="10 Widgets">10 Widgets</a></p>
                   </div>
@@ -882,7 +882,7 @@
                 </div>
 
                 <div class="span12">
-                  <pre class="prettyprint">$('#table6').heatChart({theta: 180, reverse: true});</pre>
+                  <pre class="prettyprint">$('#table6').colorful({theta: 180, reverse: true});</pre>
                   <table id="table6">
                     <tbody><tr>
                       <th></th>
@@ -1105,8 +1105,8 @@
                 </div>
                 <div class="span12">
                   <h3>Customize Lightness and Saturation (and Apha Too)</h3>
-                  <p>HeatChart assigns hues to data in HSL colorspace. The S and the L (and the alpha) are up to you. No alpha for you if you are using RGB colorspace. RGB should only be used for compatibility with the browsers that shall not be named.</p>
-                  <pre class="prettyprint">$('#table7').heatChart({theta: 180, reverse: true, alpha:0.5, saturation:90, lightness:40});</pre>
+                  <p>colorful assigns hues to data in HSL colorspace. The S and the L (and the alpha) are up to you. No alpha for you if you are using RGB colorspace. RGB should only be used for compatibility with the browsers that shall not be named.</p>
+                  <pre class="prettyprint">$('#table7').colorful({theta: 180, reverse: true, alpha:0.5, saturation:90, lightness:40});</pre>
                   <table id="table7" class="pattern-background">
                     <tbody><tr>
                       <th></th>
@@ -1329,8 +1329,8 @@
                 </div>
                 <div class="span12">
                   <h3>Customize Lightness and Saturation (and Apha Too)</h3>
-                  <p>HeatChart assigns hues to data in HSL colorspace. The S and the L (and the alpha) are up to you. No alpha for you if you are using RGB colorspace. RGB should only be used for compatibility with the browsers that shall not be named.</p>
-                  <pre class="prettyprint">$('#mri').heatChart({theta: 180, reverse: true, alpha:0.5, saturation:90, lightness:40});</pre>
+                  <p>colorful assigns hues to data in HSL colorspace. The S and the L (and the alpha) are up to you. No alpha for you if you are using RGB colorspace. RGB should only be used for compatibility with the browsers that shall not be named.</p>
+                  <pre class="prettyprint">$('#mri').colorful({theta: 180, reverse: true, alpha:0.5, saturation:90, lightness:40});</pre>
                   <table id="mri" class="mri">
                     <tr>
                       <td data-val="0"> </td>
@@ -2192,21 +2192,21 @@
       window.nasty_rgb_gradient($(this));
     });
 
-    $('#table0').heatChart({portion: 0.25, reverse: true, mapDataTo: ['h']});
-    $('#table1').heatChart({portion: 0.25, discrete: true, steps: 3, mapDataTo: ['l','h']});
-    $('#table1point5, #table1point6').heatChart({portion: 0.25, scale: 'log'});
-    $('#table2').heatChart({portion: 0.25, attributeToColor: 'color'});
-    $('#table3').heatChart({portion: 0.5});
-    $('#table4').heatChart({portion: 0.5, offset: 180});
-    $('#table5').heatChart({portion: 0.5, offset: 180, reverse: true});
-    $('#div1').heatChart({portion: 1, elementSelector: 'div'});
-    $('#div2').heatChart({colorModel: 'grayscale', elementSelector: 'div'});
-    $('#div3').heatChart({colorModel: 'grayscale', discrete: true, steps:3, elementSelector: 'div'});
-    $('#div4').heatChart({colorModel: 'grayscale', discrete: true, steps:5, elementSelector: 'div'});
-    $('#div5').heatChart({theta: 220, elementSelector: 'a', attributeToColor: 'color'});
-    $('#table6').heatChart({portion: 0.5, reverse: true});
-    $('#table7').heatChart({portion: 0.5, reverse: true, alpha:0.5, saturation:90, lightness: 40});
-    $('#mri').heatChart({portion: 0.25, reverse: true, alpha:0.5, saturation:100, dataAttribute: 'data-val'});
+    $('#table0').colorful({portion: 0.25, reverse: true, mapDataTo: ['h']});
+    $('#table1').colorful({portion: 0.25, discrete: true, steps: 3, mapDataTo: ['l','h']});
+    $('#table1point5, #table1point6').colorful({portion: 0.25, scale: 'log'});
+    $('#table2').colorful({portion: 0.25, attributeToColor: 'color'});
+    $('#table3').colorful({portion: 0.5});
+    $('#table4').colorful({portion: 0.5, offset: 180});
+    $('#table5').colorful({portion: 0.5, offset: 180, reverse: true});
+    $('#div1').colorful({portion: 1, elementSelector: 'div'});
+    $('#div2').colorful({colorModel: 'grayscale', elementSelector: 'div'});
+    $('#div3').colorful({colorModel: 'grayscale', discrete: true, steps:3, elementSelector: 'div'});
+    $('#div4').colorful({colorModel: 'grayscale', discrete: true, steps:5, elementSelector: 'div'});
+    $('#div5').colorful({theta: 220, elementSelector: 'a', attributeToColor: 'color'});
+    $('#table6').colorful({portion: 0.5, reverse: true});
+    $('#table7').colorful({portion: 0.5, reverse: true, alpha:0.5, saturation:90, lightness: 40});
+    $('#mri').colorful({portion: 0.25, reverse: true, alpha:0.5, saturation:100, dataAttribute: 'data-val'});
 
     prettyPrint();
 
