added bg image to bad wells

--- a/sample.html
+++ b/sample.html
@@ -101,6 +101,9 @@
         color: #fff;
         font-weight:bold;
       }
+      .bad {
+        background-image: url(img/bad.png);
+      }
 
     </style>
     
@@ -204,7 +207,7 @@
         </div>
           <br/>
           <h4>Pretty Ugly (RGB)</h4>
-          <div class="well">
+          <div class="well bad">
           <table id="rgb-sample">
             <tr>
               <td data-value="0">0</td>
